--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,22 @@
           <small class="help-text">For testing: limit how many new songs to download</small>
         </div>
 
+        <div class="form-group checkbox-group">
+          <label>
+            <input type="checkbox" id="fullSync" name="fullSync" />
+            <span>Full Sync Mode</span>
+          </label>
+          <small class="help-text">Fetch all pages (useful after interrupted runs or to ensure complete library)</small>
+        </div>
+
+        <div class="form-group checkbox-group">
+          <label>
+            <input type="checkbox" id="verifyFiles" name="verifyFiles" />
+            <span>Verify Files on Disk</span>
+          </label>
+          <small class="help-text">Check filesystem for existing files before downloading (slower, but re-downloads missing files)</small>
+        </div>
+
         <button type="submit" id="submit-btn">
           <span class="btn-text">Start Archive</span>
         </button>
@@ -96,6 +112,8 @@
       const cookie = form.cookie.value.trim();
       const format = form.format.value;
       const limit = form.limit.value ? parseInt(form.limit.value) : null;
+      const fullSync = document.getElementById('fullSync').checked;
+      const verifyFiles = document.getElementById('verifyFiles').checked;
       currentUsername = username;
 
       // Reset UI
@@ -105,13 +123,16 @@
       submitBtn.disabled = true;
       submitBtn.innerHTML = '<span class="btn-text">Running...</span>';
 
-      statusText.textContent = limit
-        ? `🔄 Starting archive (testing with ${limit} songs)...`
-        : '🔄 Starting archive...';
+      let statusMsg = '🔄 Starting archive';
+      if (limit) statusMsg = `🔄 Starting archive (testing with ${limit} songs)`;
+      else if (fullSync && verifyFiles) statusMsg = '🔄 Starting full sync with file verification';
+      else if (fullSync) statusMsg = '🔄 Starting full sync (fetching all pages)';
+      else if (verifyFiles) statusMsg = '🔄 Starting archive with file verification';
+      statusText.textContent = statusMsg + '...';
       progressFill.style.width = '0%';
 
       try {
-        const payload = { username, cookie, format };
+        const payload = { username, cookie, format, fullSync, verifyFiles };
         if (limit) payload.limit = limit;
 
         const res = await fetch('/api/run', {
